--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,90 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  width: 90%;
+  margin: auto;
+  background-color: #333;
+}
+
+.workoutimgcontainer {
+  width: 40%;
+  height: 20vh;
+  padding-top: 3vh;
+}
+
+.workoutimg {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.welcomecontainer {
+  position: relative;
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  position: absolute;
+  top: 9vh;
+  color: azure;
+  padding-left: 2vh;
+  font-size: 2.2em;
+  font-family: "Wallpoet", serif;
+  font-weight: 600;
+  animation: fade 3s ease-in-out 1s infinite;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.greet {
+  position: absolute;
+  top: 17vh;
+  padding-left: 2vh;
+  font-family: "Wallpoet", sarif;
+  font-size: 1.3em;
+  color: aliceblue;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+@keyframes fade {
+  0% {
+    opacity: 25%;
   }
-  a:hover {
-    color: #747bff;
+  50% {
+    opacity: 100%;
   }
-  button {
-    background-color: #f9f9f9;
+  100% {
+    opacity: 25%;
+  }
+}
+
+.notgeneratedcontainer,
+.notgeneratedcontainer form {
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+}
+
+.notgeneratedcontainer form {
+  width: 40%;
+}
+
+.notgeneratedcontainer button:hover {
+  animation: scale 2s ease-in-out 0s infinite alternate;
+  box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3), 0 8px 30px rgba(0, 0, 0, 0.2);
+}
+
+.notgeneratedcontainer button {
+  border: none;
+  color: azure;
+  font-size: 1.1em;
+  padding: 0.5em;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2), 0 6px 20px rgba(0, 0, 0, 0.15);
+  transition: all 0.3s ease;
+}
+
+@keyframes scale {
+  100% {
+    transform: scale(1.1);
   }
 }
