added edit / delete to browse workout history

--- a/src/index.css
+++ b/src/index.css
@@ -103,6 +103,12 @@ h1 {
   }
 }
 
+.editbtnsdiv {
+  display: flex;
+  justify-content: space-between;
+  align-items: last baseline;
+}
+
 .buttons-categories,
 .buttons-difficulty {
   /* width: 40%; */
